kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-hw-02-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # https://kubernetes.io/ru/docs/concepts/scheduling-eviction/assign-pod-node/
      # https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: homework
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: kuber-hw-04-pv-volume
          persistentVolumeClaim:
            claimName: kuber-hw-04-pvc
        #- name: kuber-hw-02-volume
        #  emptyDir: {}
        - name: kuber-hw-04-configmap
          configMap:
            name: kuber-hw-04-configmap
        - name: nginx-conf-volume
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - mountPath: /homework/conf/
              name: kuber-hw-04-configmap
            - mountPath: /homework
              name: kuber-hw-04-pv-volume
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf-volume
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ['sh', '-c', 'rm -f /homework/index.html']
      restartPolicy: Always

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
